option('enable-libarchive', type: 'combo', choices : ['yes', 'no', 'auto'], value : 'auto',
  description : 'Enable libarchive support.')
option('enable-libgcrypt', type: 'combo', choices : ['yes', 'no', 'auto'], value : 'auto',
  description : 'Enable libgcrypt support.')
option('enable-uchardet', type: 'combo', choices : ['yes', 'no', 'auto'], value : 'auto',
  description : 'Enable uchardet support.')
option('enable-gtk-doc', type: 'boolean', value: false,
  description : 'Generate the API reference (depends on GTK-Doc)')
option('introspection', type: 'boolean', value: true,
  description : 'Generate GObject Introspection bindings')
